[package]
edition = "2021"
name = "edge-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7" }
embedded-hal-alpha = { version = "=1.0.0-alpha.7", package="embedded-hal"  }
embedded-time = "0.12.1"
#fugit = "0.3"

esp32-wroom-rp = { git = "https://github.com/Jim-Hodapp-Coaching/esp32-wroom-rp.git", branch = "61-receive-responses-from-a-tcp-server_2"}
bme280 = { git = "https://github.com/VersBinarii/bme280-rs.git", rev = "37247c3", features = ["defmt"] }

heapless = "0.7.16"

# Versions >0.3.4 contain a breaking change (wire format 4) and version 0.3.3 is yanked,
# so we need to force version 0.3.2 for now to be compatible with the latest
# working version of probe-run.
defmt = "=0.3.2"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-rtt"] }

# We're using a Pico by default on this template
#rp-pico = "0.7"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version = "0.4.0", features=["rt", "eh1_0_alpha"] }
rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
